2004-10-17  Vincent Isambart <isambart@netcourrier.com>

	* extconf.rb: Changed add_uniq_to_objs to add_obj.

2004-10-17  Vincent Isambart <isambart@netcourrier.com>

	* extconf.rb: Fixed a bug under ruby-1.9.

2004-03-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Fix a bug under ruby-1.6.x.

2004-03-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangomain.c: Fix a memory leak of Pango.parse_markup. 
	Reported by Joao Pedrosa

2004-03-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Remove src/rbpangoinits.c when run "make distclean".

2003-12-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpango.h: Remove definition of CBOOL2RVAL(merged to Ruby/GLib).

2003-11-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangologattr.c, src/rbpangoanalysis.c: Added. 

2003-11-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/depend: Added.

2003-10-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangoattribute.c: Remove debug code. 

2003-09-11  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangolayout.c: Add Pango::Layout#index_to_pos, get_cursor_pos. 
	Move Pango::Layout#line to Pango::Layout#get_line.

2003-09-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangocontext.c, rbpangofontdescription.c, rbpangotabarray.c
	rbpangoattribute.c, rbpangolayout.c: Apply enum/flags.
	* sample/attribute.rb: ditto.
	* sample/gdk_layout.rb: Fix warning for ruby-1.8.x.

2003-08-30  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: add set_output_lib call.

	* extconf.rb: fix to allow building in a foreign directory.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>
                                                                                
   * extconf.rb: Exit with 1 when the package is not found.

2003-08-21  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* rbpangofontdescription.c: new method Pango::FontDescription#to_s
	(alias to Pango::FontDescription#to_str).

	* src/*.c: define enum/flags classes.

2003-08-17  Vincent Isambart <vincent.isambart@laposte.net>