@@ -7,6 +7,7 @@ require 'mkmf-gnome2'
 
 PKGConfig.have_package('pango') or exit 1
 check_win32
+have_func("pango_layout_iter_get_type")
 
 top = File.expand_path(File.dirname(__FILE__) + '/..') # XXX
 $CFLAGS += " " + ['glib/src'].map{|d|
